registration & add resource done

--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -1,7 +1,9 @@
-<div class="container-fluid ">
+<div class="container mt-5 w-5">
+  
+
   <form [formGroup]="itemForm" (ngSubmit)="onRegister()" class="card p-4 shadow-sm">
-    <h3 class="text-center" class="form-label">Create your account</h3>
-    <p class="text-center text-muted" class="form-label">Please enter your details here!</p>
+    <h1 class="text-center mb-3" class="form-label">Create your account</h1>
+    <p class="text-center text-muted mb-4" class="form-label">Please enter your details here!</p>
     <!-- Username -->
     <div class="mb-3">
       <label class="form-label">Username<span class="required-asterisk">*</span></label>
