--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-registration></app-registration>
+<!-- <router-outlet></router-outlet> -->
+ <app-registration></app-registration>
+  <!-- <app-add-resource></app-add-resource> -->
