--- a/client/src/app/registration/registration.component.scss
+++ b/client/src/app/registration/registration.component.scss
@@ -1,11 +1,9 @@
 /* Overall container */
-
-.container-fluid {
-  width: 500px;
-  height: 550px;
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
   background-color: #f4f4f4; /* Dark background */
   font-family: 'Inter', sans-serif;
 }
@@ -16,9 +14,8 @@
 /* Card wrapper */
 .card {
   display: flex;
-  // flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 500px;
+  height: 550px;
   background-color: #3a3746;
   border-radius: 16px;
   overflow: hidden;
@@ -43,7 +40,7 @@
   position: absolute;
   top: 24px;
   left: 24px;
-  font-size: 16px;
+  font-size: 24px;
   font-weight: bold;
 }
 
@@ -55,7 +52,7 @@
   color: #fff;
   padding: 8px 16px;
   border-radius: 8px;
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
 }
 
@@ -63,7 +60,7 @@
   position: absolute;
   bottom: 40px;
   left: 24px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
 }
 
@@ -78,7 +75,7 @@
 }
 
 .card-right h2 {
-  font-size: 16px;
+  font-size: 28px;
   margin-bottom: 8px;
 }
 
