developing add feedback component

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,3 @@
-//doto: complete missing code..
+<!-- <router-outlet></router-outlet> -->
+ <!-- <app-create-event></app-create-event> -->
+ <app-add-feedback></app-add-feedback>
