All testcases passed

--- a/client/src/app/add-resource/add-resource.component.html
+++ b/client/src/app/add-resource/add-resource.component.html
@@ -1,1 +1,82 @@
-//doto: complete missing code..
+<div *ngIf="responseMessage" class="alert alert-success mt-4" role="alert">
+  {{ responseMessage }}
+</div>
+<div class="d-flex justify-content-between mt-4">
+    <h2 class="mb-0">Add Resource</h2>  
+  
+  </div>
+  <div class="row mt-3">
+    <div class="card">
+     
+        <div class="card-body">
+            <form class="mb-3 mt-md-4" [formGroup]="itemForm" (ngSubmit)="onSubmit()">
+                <div class="row">
+                  <div class="col-md-3">
+                    <div class="mb-3">
+                      <label for="eventId" class="form-label">Event</label>
+                      <select name="eventId" formControlName="eventId" class="form-control" id="eventId">
+                        <option value="null">Choose Event</option>
+                        <option *ngFor="let val of eventList" [value]="val.id">{{val.title}}</option>
+                      </select>
+                      <div *ngIf="itemForm.controls['eventId'].invalid && (itemForm.controls['eventId'].dirty || itemForm.controls['eventId'].touched)"
+                        class="ng-dirty">
+                        <span *ngIf="itemForm.controls['eventId'].errors">
+                          <span class="text-danger">Please Choose Event.</span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                    <div class="col-md-3">
+                        <div class="mb-3">
+                            <label for="type" class="form-label ">Type</label>
+                            <input type="text" name="type"  formControlName="type" [(ngModel)]="formModel.type" class="form-control" id="type" placeholder="Type">
+                            <div *ngIf="itemForm.controls['type'].invalid && (itemForm.controls['type'].dirty || itemForm.controls['type'].touched)"
+                            class="ng-dirty">
+                            <span *ngIf="itemForm.controls['type'].errors">
+                              <span class="text-danger">Please Enter type .</span>
+                            </span>
+                          </div>
+                          </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="mb-3">
+                          <label for="description" class="form-label ">Description</label>
+                          <input type="text" name="description"  formControlName="description" [(ngModel)]="formModel.description" class="form-control" id="description" placeholder="Description">
+                          <div *ngIf="itemForm.controls['description'].invalid && (itemForm.controls['description'].dirty || itemForm.controls['description'].touched)"
+                          class="ng-dirty">
+                          <span *ngIf="itemForm.controls['description'].errors">
+                            <span class="text-danger">Please Enter description .</span>
+                          </span>
+                        </div>
+                        </div>
+                  </div>
+                    <div class="col-md-3">
+                      <div class="mb-3">
+                            <label for="availabilityStatus" class="form-label ">Availability Status</label>
+                            <select  class="form-control" name="availabilityStatus" id="availabilityStatus" formControlName="availabilityStatus" [(ngModel)]="formModel.availabilityStatus">
+                                <option disabled value="null">Choose Availability Status</option>
+                                 <option value="Yes">Yes</option>
+                                 <option value="No">No</option>                              
+                              </select>
+                              <div *ngIf="itemForm.controls['availabilityStatus'].invalid && (itemForm.controls['availabilityStatus'].dirty || itemForm.controls['availabilityStatus'].touched)"
+                              class="ng-dirty">
+                              <span *ngIf="itemForm.controls['availabilityStatus'].errors">
+                                <span class="text-danger">Please choose Availability Status .</span>
+                              </span>
+                            </div>
+                            </div>
+                          
+                    </div>
+                    <div class="col-md-2">
+                        <div class="d-grid">
+                            <br>
+                            <button class="btn btn-outline-dark mt-1" type="submit">Submit</button>
+                          </div>
+                    </div>
+                </div>
+              </form>
+        </div>
+    </div>
+  </div>
+
+
