--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,1 +1,31 @@
-//doto: complete missing code..
+ <div class="login-container">
+  <div class="login-card">
+    <h1>Login</h1>
+    <form [formGroup]="itemForm" (ngSubmit)="onLogin()">
+      <!-- Username -->
+      <div class="form-group">
+        <label for="username">Username <span class="required">*</span> </label>
+        <input type="text" placeholder="Username" formControlName="username" />
+        <div *ngIf="itemForm.get('username')?.invalid && itemForm.get('username')?.touched" class="error">
+          Username is required (min 4 chars, no spaces)
+        </div>
+      </div>
+      <!-- Password -->
+      <div class="form-group password-group">
+        <label for="username">Password <span class="required">*</span> </label>
+        <input [type]="showPassword ? 'text' : 'password'" placeholder="Password" formControlName="password" />
+        <button type="button" class="eye-btn" (click)="togglePassword()">
+          <i [class]="showPassword ? 'fa fa-eye-slash' : 'fa fa-eye'"></i>
+        </button>
+        <div *ngIf="itemForm.get('password')?.invalid && itemForm.get('password')?.touched" class="error">
+          Password is required
+        </div>
+      </div>
+      <!-- Error Message -->
+      <div *ngIf="showError" class="error-message">{{ errorMessage }}</div>
+      <!-- Submit -->
+      <button type="submit" [disabled]="itemForm.invalid">Login</button>
+    </form>
+    <p>Don't have an account? <a (click)="registration()">Register</a></p>
+  </div>
+</div>
