added home and about-us

--- a/client/src/app/home/home-page.component.html
+++ b/client/src/app/home/home-page.component.html
@@ -1,12 +1,12 @@
 <!-- Hero Section -->
- <!-- <home-navbar></home-navbar> -->
+ <home-navbar></home-navbar>
 <section class="hero-section d-flex align-items-center justify-content-center">
   <div class="hero-content text-white">
     <h1 class="fw-bold mb-3">Empower Your Financial Future</h1>
     <p class="lead mb-4">Welcome to Financial Seminar & Workshop - Your Gateway to mastering financial literacy and building a secure future.</p>
     <div>
       <a routerLink="/registration" class="btn btn-primary btn-lg me-3">Register Now</a>
-      <a routerLink="/login" class="btn btn-outline-light btn-lg">Login</a>
+      <a routerLink="/login" class="btn btn-outline-light btn-lg login">Login</a>
     </div>
   </div>
   <div class="hero-image">
