--- a/client/src/app/about-us/about-us.component.html
+++ b/client/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<!-- <home-navbar></home-navbar> -->
+<home-navbar></home-navbar>
 <div class="about-us container py-5">
   <div class="row align-items-center">
     <!-- Left Section: Text -->
@@ -13,7 +13,7 @@
         With expert speakers and interactive sessions, we ensure that learning is engaging and impactful. Whether you are
         a beginner or a professional, our programs cater to all levels of financial literacy.
       </p>
-      <button class="btn btn-warning mt-3" aria-label="Learn more about our mission">Learn More</button>
+      <!-- <button class="btn btn-warning mt-3" aria-label="Learn more about our mission">Learn More</button> -->
     </div>
 
     <!-- Right Section: Image -->
